@@ -149,6 +149,10 @@ Version 7.5  [ TODO ]
           linear constraint LPConstraintEulerPositive was never meant to be
           used with TreeEnumeration (since the constraint does not map out a
           linear subspace).
+    UTILITIES:
+        trisetcmp:
+            - Now finds matches (or non-matches) in any dimension, not just
+              dimensions 3 and 4.
 
 Version 7.4.1  [ 30 November, 2025 ]
 
